--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project (opengl-world)
 # The main executable
 add_executable(opengl-world
         src/main.cpp
-        src/triangle.h src/shader.cpp src/shader.h src/camera.h external/stb/stb_image.h)
+        src/triangle.h src/shader.cpp src/shader.h src/camera.h src/Log.cpp src/Log.h src/Game.cpp external/stb/stb_image.h)
 
 set_property(TARGET opengl-world PROPERTY CXX_STANDARD 17)
 target_compile_options(opengl-world PRIVATE -Wall)
